syntax = "proto2";


message TStatsServiceConfig {
    required uint32 Port = 1 [default=8082];
}
